frontend/src/components/SettingsPage/SettingsPage.module.css
.backgroundImage {
  margin: 0;
}

/* Profile*/

.field {
  border-radius: 25px;
  box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.8);
  height: 1vh;
  width: 30vw;
  /* margin-bottom: 15px; */
  padding: 2vh;
  background-color: white;
  margin: 0px;
  text-align: center;
  border: none;
}

.submitButton {
  width: 100px;
  background-color: white;
  border: 1px solid #ccc;
  border-radius: 20px;
  color: #333;
  cursor: pointer;
  font-size: 14px;
  margin: 0px 5px;
  outline: none;
  padding: 12px 22px;
  transition: background-color 0.3s, border-color 0.3s;
  box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.8);
  margin-top: 5%;
}

.submitButton:hover {
  background-color: #e0e0e0;
  border-color: #aaa;
}

/* @media screen and (max-width: 1000px) {
  .field {
    width: 50%;
  }
}

@media screen and (max-width: 999px) and (min-width: 600px) {
  .field {
    width: 60%;
  }
}

@media screen and (max-width: 499px) and (min-width: 400px) {
  .field {
    width: 80%;
  }
} */

/* Wardrobe*/

.clothespanel {
  margin: 20px;
  padding: 20px;
  width: 100vw;
  max-width: 80vw;
}

.wardrobe {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: scroll;
}

.outfitTileContainer {
  margin: 50px auto 0px;
  width: 1000px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-rows: auto;
  grid-gap: 20px;
  margin-bottom: 3%;
}

.card {
  border: 3px solid white;
  background-color: lavender;
  font-weight: bold;
  box-shadow: 8px 8px 5px;
}

.card img {
  border-radius: 90%;
}

.card p {
  border-top: 3px solid black;
  background-color: lavender;
}

.profileFormContainer {
  position: absolute;
  left: 0px;
}

.navLinkContainer {
  padding-top: 6%;
  text-align: center;
}

.navLink {
  text-decoration: none;
  color: rgb(20, 19, 19);
}

